--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
 .gradle
+.idea
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
@@ -8,3 +9,6 @@
 /captures
 .externalNativeBuild
 gradle.properties
+log.txt
+/app/src/androidTest
+/app/src/test
