--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,36 +1,44 @@
 apply plugin: 'com.android.application'
 
+
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:gridlayout-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibVersion"
+    compile "com.android.support:gridlayout-v7:$supportLibVersion"
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.squareup.picasso:picasso:2.5.0'
-    testCompile 'junit:junit:4.12'
+    compile 'com.google.dagger:dagger:2.10'
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+}
+configurations.all {
+    resolutionStrategy.force "com.android.support:support-annotations:$supportLibVersion"
 }
 
-
+configurations.compile.dependencies.each { compileDependency ->
+    println "Excluding compile dependency: ${compileDependency.getName()}"
+    configurations.androidTestCompile.dependencies.each { androidTestCompileDependency ->
+        configurations.androidTestCompile.exclude module: "${compileDependency.getName()}"
+    }
+}
 android {
-    compileSdkVersion 23
-    buildToolsVersion = "25.0.0"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion = rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "be.sanderdebleecker.uselections"
         buildConfigField("String","API_KEY",API_KEY)
-        minSdkVersion 19
-        targetSdkVersion 23
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -46,15 +54,3 @@ android {
         sourceCompatibility 1.8
     }
 }
-
-retrolambda {
-    jdk System.getenv('JAVA8_HOME')
-    oldJdk System.getenv('JAVA7_HOME')
-    jvmArgs '-arg1', '-arg2'
-    defaultMethods false
-    incremental true
-}
-repositories {
-    mavenCentral()
-}
-
