--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="be.sanderdebleecker.uselections">
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -8,6 +9,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".core.application.CivicApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".ElectionsActivity">
             <intent-filter>
