--- a/build.gradle
+++ b/build.gradle
@@ -3,24 +3,35 @@
 buildscript {
     repositories {
         jcenter()
-        mavenCentral()
+        maven {
+            url 'https://maven.google.com'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-alpha1'
-        classpath 'me.tatarka:gradle-retrolambda:3.6.1'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-apply plugin: 'me.tatarka.retrolambda'
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
     }
 }
+ext {
+    //SDK & Tools
+    minSdkVersion = 19
+    targetSdkVersion = 25
+    compileSdkVersion = 25
+    buildToolsVersion = "25.0.2"
 
+    //App Dependencies
+    supportLibVersion = '25.1.0'
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
