--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,17 @@ ext {
     targetSdkVersion = 25
     compileSdkVersion = 25
     buildToolsVersion = "25.0.2"
+    javaVersion = 1.8
 
     //App Dependencies
     supportLibVersion = '25.1.0'
+    retrofitVersion = '2.3.0'
+    daggerVersion = '2.10'
+    butterKnifeVersion = '8.6.0'
+    picassoVersion = '2.5.0'
+    rxJavaVersion = '2.1.0'
+    rxAndroidVersion = '2.0.1'
+    hdodenHofVersion = '2.1.0'
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
